[tool.poetry]
name = "wows-api-async"
version = "0.1.2"
description = "async python api for world of warships"
authors = ["Lajos Santa <santa.lajos@gmail.com>"]
license = "MIT"
repository = "https://github.com/voidpp/wows-api-async"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.16.1"
pydantic = "^1.7.3"
aioredis = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
